fix scrollbar in ie8

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@ button.share {
 	display: none;
 }
 
+#content-wrapper {
+	overflow-x: auto;
+}
+
 #gallery.hascontrols {
 	overflow: hidden;
 	text-align: justify;
@@ -74,6 +78,7 @@ button.share {
 
 #gallery a.image > img {
 	max-height: 200px;
+	width: auto;
 }
 
 #gallery a.album,
